--- a/style.css
+++ b/style.css
@@ -101,3 +101,82 @@ nav a {
 
 /* end intro */
 
+/* stack */
+.stack {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.stack-title {
+  color: #42446E;
+  font-size: 48px;
+  font-weight: 700;
+  
+}
+
+.stack-desc {
+  color: #666666;
+  font-weight: 400;
+  font-size: 32px;
+}
+
+.stack-icons {
+  /* border: 1px solid grey; */
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 30px;
+  justify-items: center;
+  padding: 30px 50px;
+}
+
+@media (max-width:1000px) {
+  .stack-icons {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media (max-width:700px) {
+  .stack-icons {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width:600px) {
+  .stack-icons {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width:450px) {
+  .stack-icons {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+/* .stack-icons img {
+  width: 60px;
+  height: 60px;
+  transition: transform 0.3s;
+}
+.stack-icons img:hover {
+  transform: scale(1.1);
+} */
+
+.stack-icon-container {
+  width: 120px;
+  height: 120px;
+}
+
+.stack-icon {
+  width: 100%;
+  height: 100%;
+  transition: transform 0.3s;
+}
+
+.stack-icon:hover {
+  transform: scale(1.1);
+}
+
+/* end stack */
