--- a/style.css
+++ b/style.css
@@ -6,11 +6,11 @@
 
 body {
   font-family: 'Poppins', sans-serif;
+  height: 3000px;
 }
 
 /* header */
 header {
-  /* border: 1px solid blue; */
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -19,7 +19,6 @@ header {
 }
 
 .logo {
-  /* border: 1px solid red; */
   display: flex;
   align-items: center;
 }
@@ -30,7 +29,6 @@ header {
 }
 
 .right-side {
-  /* border: 1px solid black; */
   display: flex;
   align-items: center;
   gap: 30px;
@@ -45,7 +43,6 @@ nav a {
   text-decoration: none;
   color: #666666;
   font-size: 21px;
-  /* height: 26px; */
 }
 
 .social-icons {
@@ -67,7 +64,6 @@ nav a {
   justify-content: space-between;
   align-items: center;
   padding: 50px;
-  /* background-color: #f9f9f9; */
 }
 
 .intro p {
@@ -96,7 +92,6 @@ nav a {
   object-fit: cover;
   border: 5px solid transparent;
   border-image: linear-gradient(45deg, #6a00f4, #00d4ff);
-  /* border-image-slice: 1; */
 }
 
 /* end intro */
@@ -109,21 +104,19 @@ nav a {
   gap: 10px;
 }
 
-.stack-title {
+.stack-title, .projects-title {
   color: #42446E;
   font-size: 48px;
-  font-weight: 700;
-  
+  font-weight: 700;  
 }
 
-.stack-desc {
+.stack-desc, .projects-desc {
   color: #666666;
   font-weight: 400;
   font-size: 32px;
 }
 
 .stack-icons {
-  /* border: 1px solid grey; */
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   gap: 30px;
@@ -155,15 +148,6 @@ nav a {
   }
 }
 
-/* .stack-icons img {
-  width: 60px;
-  height: 60px;
-  transition: transform 0.3s;
-}
-.stack-icons img:hover {
-  transform: scale(1.1);
-} */
-
 .stack-icon-container {
   width: 120px;
   height: 120px;
@@ -180,3 +164,93 @@ nav a {
 }
 
 /* end stack */
+
+
+/* projects */
+.projects {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.projects-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin-left: 50px;
+  margin-right: 50px;
+  gap: 30px;
+}
+
+@media (max-width:1200px) {
+  .projects-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width:800px) {
+  .projects-grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+.project {
+  border-radius: 20px;
+  width: 375px;
+  box-shadow: 2px 2px 100px 0px rgba(0, 0, 0, 0.2);
+}
+
+.project-buttom {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.project-title {
+  font-weight: 500;
+  font-size: 28px;
+  color: #000000;
+}
+
+.project-desc {
+  font-weight: 300;
+  font-size: 18px;
+  color:#666666;
+  margin-bottom: 10px;
+}
+
+.project-stack {
+  font-weight: 400;
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+.project-span {
+  font-weight: 300;
+  font-size: 14px;
+}
+
+.projects-links {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.project-link-container {
+  display: flex;
+  gap: 10px;
+}
+
+.project-link-image-container {
+  width: 20px;
+  height: 20px;
+}
+
+.project-link-image {
+  width: 100%;
+  height: 100%;
+}
+
+.project-link {
+  color: #000000
+}
+/* end projects */
