--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
 * {
-  margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
 body {
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-top: 0;
+  margin-bottom: 0;
+
   font-family: 'Poppins', sans-serif;
-  height: 3000px;
+  height: 10000px;
 }
 
 /* header */
@@ -171,13 +175,12 @@ nav a {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 200px;
 }
 
 .projects-grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  margin-left: 50px;
-  margin-right: 50px;
   gap: 30px;
 }
 
@@ -200,8 +203,7 @@ nav a {
 }
 
 .project-buttom {
-  margin-left: 20px;
-  margin-right: 20px;
+  margin: 10px;  
 }
 
 .project-title {
@@ -254,3 +256,45 @@ nav a {
   color: #000000
 }
 /* end projects */
+
+
+/* footer */
+footer {
+  display: flex;
+  flex-direction: column;
+}
+
+.first-footer {
+  display: flex;
+  justify-content: space-between;
+  color: rgba(66, 68, 110, 1);
+  margin-bottom: 50px;
+  align-items: center;
+}
+
+.right-first-footer {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 80px;
+}
+
+.second-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.designed-by {
+  color: grey;
+  font-weight: 400px;
+  font-size: 18px;
+}
+
+.gradient {
+  background: linear-gradient(90deg, #13B0F5 -2.06%, #E70FAA 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+/* end footer */
