--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ body {
   margin-top: 0;
   margin-bottom: 0;
 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   font-family: 'Poppins', sans-serif;
   height: 10000px;
 }
@@ -20,6 +24,7 @@ header {
   align-items: center;
   padding: 20px 50px;
   background-color: white;
+  gap: 200px;
 }
 
 .logo {
@@ -111,6 +116,7 @@ nav a {
 .stack-title, .projects-title {
   color: #42446E;
   font-size: 48px;
+  margin-bottom: 0;
   font-weight: 700;  
 }
 
@@ -118,6 +124,7 @@ nav a {
   color: #666666;
   font-weight: 400;
   font-size: 32px;
+  margin-bottom: 100px;
 }
 
 .stack-icons {
@@ -264,6 +271,12 @@ footer {
   flex-direction: column;
 }
 
+hr {
+  margin-left: 0;
+  margin-right: 0;
+  color: rgba(102, 102, 102, 1);
+}
+
 .first-footer {
   display: flex;
   justify-content: space-between;
@@ -284,6 +297,7 @@ footer {
   justify-content: space-between;
   align-items: center;
   margin-top: 50px;
+  gap: 150px;
 }
 
 .designed-by {
