--- a/style.css
+++ b/style.css
@@ -4,10 +4,7 @@
 }
 
 body {
-  margin-left: 10px;
-  margin-right: 10px;
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
 
   display: flex;
   flex-direction: column;
