--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 * {
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
 body {
   margin: 0;
+  margin-left: 10px;
+  margin-right: 10px;
 
   display: flex;
   flex-direction: column;
@@ -314,6 +317,14 @@ hr {
   align-items: center;
   gap: 80px;
 }
+
+@media (max-width: 650px) {
+  .right-first-footer {
+    flex-direction: column;
+    gap: 30px;
+  }    
+}
+
 
 .second-footer {
   display: flex;
