--- a/style.css
+++ b/style.css
@@ -234,6 +234,20 @@ nav a {
   box-shadow: 2px 2px 100px 0px rgba(0, 0, 0, 0.2);
 }
 
+.project-image-container {
+  width: 100%;
+}
+
+.project-image {
+  max-width: 100%;
+}
+
+@media (max-width: 380px) {
+  .project {
+    width: 350px;
+  }
+}
+
 .project-buttom {
   margin: 10px;  
 }
